Settings : Hide the accounts which added as the Local account.
There are some accounts created as the local accounts, for example the
Phone local account. These accounts will be created when phone boot,
and the user couldn't add or delete them.

Hide these local accounts in the Settings.

Change-Id: Id8a64d4dc2d90e1aed8e0c63bd04efe7e97d7d45
CRs-Fixed: 980321

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1035,4 +1035,10 @@
         <item>Red</item>
     </string-array>
 
+    <!-- Defined the hide accounts' type -->
+    <string-array name="hide_account_list">
+        <item>com.qualcomm.qti.RIDL</item>
+        <item>com.android.localphone</item>
+        <item>com.android.sim</item>
+    </string-array>
 </resources>
